--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -37,7 +37,7 @@
                 </button>
                 <ul class="dropdown-menu btn-light">
                     <li><a class="dropdown-item" (click)="dados_baja_escolares()">Escolares</a></li>
-                    <li><a class="dropdown-item">Ingreso</a></li>
+                    <li><a class="dropdown-item" (click)="dados_baja_ingreso()">Ingreso</a></li>
                     <li><a class="dropdown-item" (click)="datos_baja_ftd()">FTD</a></li>
                     <li><a class="dropdown-item" (click)="dados_baja()">Personales</a></li>
                 </ul>
