--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/datos-escolares.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/datos-escolares.component.html
@@ -16,19 +16,19 @@
             <div class="col-3">Correo</div>
             <div class="col-3">Carrera</div>
             <div class="col-2">Modalidad Escolar</div>
-            <div class="col-1">Editar</div>
-            <div class="col-1">Eliminar</div>
+            <div class="col">Editar</div>
+            <div class="col">Eliminar</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let escolares of escolares">
-            <div class="row text-center">
+            <div class="row text-center"  *ngIf="escolares.activo == true" >
                 <div class="col-1">{{escolares.id}}</div>
                 <div class="col-3">{{escolares.correoEscolar}}</div>
                 <div class="col-3">{{escolares.carrera}}</div>
                 <div class="col-2">{{escolares.modalidadEscolar.nombre}}</div>
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col-1 text-white mt-1" [routerLink]="['/registro-datos-escolares', escolares.id]">Editar</button>
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click) ="deleteEstudiante(escolares.id)">Eliminar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col text-white mt-1" [routerLink]="['/registro-datos-escolares', escolares.id]">Editar</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col mt-1" (click) ="deleteEstudiante(escolares.id)">Dar de Baja</button>
             </div>
         </tbody>
     </table>
