--- a/frontend/recursos/src/app/components/admin/panel-admin/ingreso-baja/ingreso-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/ingreso-baja/ingreso-baja.component.html
@@ -6,7 +6,7 @@
 
 <!-- Panel del admin -->
 <div class="mt-3 container-lg">
-    <h1 class="mt-5 font-weight-bold mb-4 text-center col-title">Datos Personales (Baja)</h1>
+    <h1 class="mt-5 font-weight-bold mb-4 text-center col-title">Datos Ingreso (Baja)</h1>
     <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success border-0" type="submit">Buscar</button>
@@ -17,20 +17,22 @@
     <div class="mt-4">
         <div class="row btn-primary text-white text-center">
             <div class="col-1">ID</div>
-            <div class="col-2">Nombre</div>
-            <div class="col-2">Primer Apellido</div>
-            <div class="col-2">Segundo Apellido</div>
+            <div class="col-2">Trámite</div>
+            <div class="col-2">Perfilamiento</div>
+            <div class="col-2">Modalidad</div>
             <div class="col">Alta</div>
+            <div class="col">Eliminar</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
-        <tbody >
+        <tbody *ngFor="let ingreso of ingreso">
             <div class="row text-center">
-                <div class="col-1"></div>
-                <div class="col-2"></div>
-                <div class="col-2"></div>
-                <div class="col-2"></div>
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col text-white mt-3" >Dar Alta</button>
+                <div class="col-1">{{ingreso.id}}</div>
+                <div class="col-2">{{ingreso.tramite.nombreTramite}}</div>
+                <div class="col-2">{{ingreso.perfilamiento.nombrePerfilamiento}}</div>
+                <div class="col-2">{{ingreso.modalidad.nombre}}</div>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col text-white mt-3" (click)="activated(ingreso)">Dar Alta</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 col text-white mt-3">Eliminar</button>
             </div>
         </tbody>
     </table>
