agregando pipes en datos escolares y de ingreso

--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -26,8 +26,8 @@
                 <li><a class="dropdown-item" (click)="modalidad()">Modalidad</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" (click)="beca()">Beca</a></li>
-                <li><a class="dropdown-item">Grupo</a></li>
-                <li><a class="dropdown-item">Tutor</a></li>
+                <li><a class="dropdown-item" (click)="grupo()">Grupo</a></li>
+                <li><a class="dropdown-item" (click)="tutor()">Tutor</a></li>
             </ul>
         </div>
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
