modificando Datos FTD del Backend y frontend. Agregar vistas a los datos auxiliares. agregar datos FTD

--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -28,6 +28,7 @@
                 <li><a class="dropdown-item" (click)="beca()">Beca</a></li>
                 <li><a class="dropdown-item" (click)="grupo()">Grupo</a></li>
                 <li><a class="dropdown-item" (click)="tutor()">Tutor</a></li>
+                <li><a class="dropdown-item" (click)="curso()">Curso</a></li>
             </ul>
         </div>
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
