--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/beca/beca.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/beca/beca.component.html
@@ -26,7 +26,7 @@
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Nombre de la Modalidad</label>
                             <input type="text" class="form-control" placeholder="Nombre de la Beca" id="beca"
-                                name="beca" [(ngModel)]="beca.tipo">
+                                name="beca" [(ngModel)]="beca.nombre">
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -55,12 +55,10 @@
             <tbody *ngFor="let beca of becas">
                 <div class="row text-center">
                     <div class="col-1">{{beca.id}}</div>
-                    <div class="col-7">{{beca.tipo}}</div>
+                    <div class="col-7">{{beca.nombre}}</div>
 
                     <!-- Editar perfilamiento -->
-                    <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1"
-                        data-bs-toggle="modal" data-bs-target="#modal-beca"
-                        [routerLink]="['/datos-ftd/becas', beca.id]">Editar</button>
+                    <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" data-bs-toggle="modal" data-bs-target="#modal-beca" [routerLink]="['/datos-ftd/becas', beca.id]">Editar</button>
 
                     <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1"
                         (click)="delete(beca)">Eliminar</button>
