agregando periodo tanto en el backend como en el frontend

--- a/frontend/recursos/src/app/components/user/principal/principal.component.html
+++ b/frontend/recursos/src/app/components/user/principal/principal.component.html
@@ -10,8 +10,9 @@
             </div>
         <div class="col-4 display-2">
             <div class="d-grid justify-content-center align-items-center boton">
-                <button type="button" class="btn btn-secondary letter border-0" (click)="aspirante()"> Soy Aspirante</button>
-                <button type="button" class="btn btn-success letter mb-5 border-0" (click)="login()">Soy Administrador</button>
+                <button type="button" class="btn btn-secondary letter border-0" (click)="aspirante()"> Aspirante</button>
+                <button type="button" class="btn btn-danger letter border-0" (click)="loginAlumno()">Alumno</button>
+                <button type="button" class="btn btn-success letter mb-5 border-0" (click)="login()">Administrador</button>
             </div>
         </div>
     </div>
