--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -20,6 +20,7 @@
                 <li><a class="dropdown-item" (click)="universidad()">Universidad</a></li>
                 <li><a class="dropdown-item" (click)="modalidadEscolar()">Modalidad Escolar</a></li>
                 <li><a class="dropdown-item" (click)="plan_educativo()">Plan Educativo</a></li>
+                <li><a class="dropdown-item" (click)="periodo()">Periodo</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" (click)="perfilamiento()">Perfilamiento</a></li>
                 <li><a class="dropdown-item" (click)="tramite()">Trámite</a></li>
@@ -31,7 +32,7 @@
                 <li><a class="dropdown-item" (click)="curso()">Curso</a></li>
             </ul>
         </div>
-        <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
+        <button type="button" class="btn btn-primary border-0">Documentos Mensuales</button>
         <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle border-0" type="button" data-bs-toggle="dropdown" aria-expanded="true">
                     Dados de Baja
