nueva interfaz en alumno y vistas en datos escolares

--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -42,6 +42,20 @@
                     <li><a class="dropdown-item" (click)="dados_baja_ingreso()">Ingreso</a></li>
                     <li><a class="dropdown-item" (click)="datos_baja_ftd()">FTD</a></li>
                     <li><a class="dropdown-item" (click)="dados_baja()">Personales</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item">Universidad</a></li>
+                    <li><a class="dropdown-item">Modalidad Escolar</a></li>
+                    <li><a class="dropdown-item">Plan Educativo</a></li>
+                    <li><a class="dropdown-item">Periodo</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item">Perfilamiento</a></li>
+                    <li><a class="dropdown-item">Trámite</a></li>
+                    <li><a class="dropdown-item">Modalidad</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item">Beca</a></li>
+                    <li><a class="dropdown-item">Grupo</a></li>
+                    <li><a class="dropdown-item">Tutor</a></li>
+                    <li><a class="dropdown-item">Curso</a></li>
                 </ul>
         </div>
 </div>
