--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/datos-ftd.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/datos-ftd.component.html
@@ -11,7 +11,7 @@
     </form>
     <button class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" (click)="obtenerDatosFTD()">Detalles</button>
     <div class="mt-4">
-        <div class="row btn-primary">
+        <div class="row btn-primary text-white">
             <div class="col-1">ID</div>
             <div class="col-3">Nombre del Proyecto</div>
             <div class="col-3">Avance del Proyecto</div>
