--- a/frontend/recursos/src/app/components/alumno/panel-alumno/panel-alumno.component.html
+++ b/frontend/recursos/src/app/components/alumno/panel-alumno/panel-alumno.component.html
@@ -1,4 +1,3 @@
-<canvas #signaturePad></canvas>
+<app-navv></app-navv>
 
-        <button (click)="clearSignature()" class="btn btn-primary">Limpiar Firma</button>
-        <button (click)="saveSignature()"  class="btn btn-primary">Guardar Firma</button>s
+<app-barra-alumno></app-barra-alumno>
