--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ftd/registro-datos-ftd.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ftd/registro-datos-ftd.component.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-3 mt-4">
             <label class="form-label">Fecha de Ingreso</label>
-            <input type="date" class="form-control" placeholder="Fecha de Ingreso" id="fechaIngreso" name="fechaIngreso" [(ngModel)]="datosFTD.fechaIngreso">
+            <input type="date" class="form-control" placeholder="Fecha de Ingreso" id="fechaIngreso" name="fechaIngreso" [(ngModel)]="datosFTD.fechaIngreso" (change)="generarMatricula()">
         </div>
         <div class="col-md-3 mt-4">
             <label class="form-label">Fecha de Término</label>
@@ -72,7 +72,7 @@
         </div>
         <div class="col-md-3 mt-4">
             <label class="form-label">Matricula FTD</label>
-            <input type="text" class="form-control" placeholder="Matricula FTD" id="matriculaFTD" name="matriculaFTD" [(ngModel)]="datosFTD.matriculaFTD">
+            <input type="text" class="form-control" placeholder="Matricula FTD" id="matriculaFTD" name="matriculaFTD" [(ngModel)]="datosFTD.matriculaFTD" (click)="generarMatricula()">
         </div>
         <div class="col-md-4 mt-4">
             <label class="form-label">Correo Becario</label>
